# Pizza-Delivery-App

./: .env  Git Commands Learning.docx  Learning.docx  Project Structure.docx  README.md  activate_env.txt  db_operations.py  main.py  pizza_delivery.db  pyproject.toml  ~$oject Structure.docx  ~$ructure.docx  ~$t Commands Learning.docx  ~WRL0005.tmp
App/DataModels/: refresh_token_model.py  user_model.py
App/DataModels/Auth_Users/: black_list_token_model.py  refresh_token_model.py
App/DataModels/Menu_Model/: menu_model.py
App/Database/: database.py  init_db.py
App/Database/data_models/: order_model.py  pizza_model.py  user_model.py
App/Routes/: auth_routes.py  login_register.py  order_routes.py  pizza_routes.py  profile.py  users_routes.py
App/Routes/Auth_Users/: login_register.py  profile.py
App/Routes/Menu_Routes/: menu_routes.py
App/Schemas/: login.py  logout_schema.py  refresh_token_schema.py  settings.py  signup.py
App/Schemas/Auth_Users/Password_Schema/: change_password_schema.py
App/Schemas/Menu/: menu_schema.py
App/Schemas/Menu_Schema/: menu_schema.py
App/Schemas/password_schema/: change_password_schema.py
App/Schemas/user_schemas/: login_schema.py  register_schema.py  token_schema.py  update_schema.py
App/Security/: authentication.py  jwt.py
App/Utils/: constant.py  middleware.py  tokens.py  validator.py
Other/: order_model.py  order_routes.py  order_schemas.py  pizza_routes.py  pizza_schemas.py
Project Structure/: 1) Authorization.docx  2) Menu Management.docx  Project Structure.docx
(+7 files in other folders)
