[project]
name = "Pizza-App"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.135.1",
    "fastapi-jwt-auth2>=0.5.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "uuid>=1.30",
    "uvicorn>=0.42.0",
]
